--- a/css-mission/2-2-mission/css/style.css
+++ b/css-mission/2-2-mission/css/style.css
@@ -1,6 +1,7 @@
 /* 레이아웃 설정 */
 *{
     margin:0;
+    padding:0;
 }
 body{
     margin:100px;
@@ -12,7 +13,7 @@ body{
 .wrap .left{
     float: left;
     padding-right:40px;
-    border-right:2px solid #999;
+    border-right:0.125 solid #eee;
 }
 .wrap .right{
     padding-left:80px;
